fix constructor call in test (#47)
* fix constructor call in test

* fix indents

* reduce integration testing

* fix config for functional testing

* fix config for functional testing

* fix config for functional testing